@@ -218,8 +218,8 @@ table.stats td:hover	{background-color:rgba(0,14,32,0.9);}
 table.list				{width:100%; border-collapse:collapse;}
 table.list td			{color:#fff; font-size:1.25em; line-height:1.35em; word-spacing:0.7px; padding:20px 0; vertical-align:top; border-bottom:1px solid #333642;}
 table.list td span		{display:block; padding-top:5px; color:#9C8876; font-size:0.7em; line-height:1.0em;}
-table.list td:nth-child(3)	{text-align:right; padding-right:0; min-width:160px;}
-table.list td:nth-child(2)	{padding:0;}
+table.list td.title		{padding:0;}
+table.list td.date		{text-align:right; padding-right:0; min-width:160px;}
 table.list a			{display:inline-block; padding:20px; width:100%; color:#A8C5E5;}
 table.list a:focus		{color:#A8C5E5; text-decoration:none;}
 table.list a:link  		{color:#A8C5E5; text-decoration:none;}
@@ -275,9 +275,9 @@ table.money a:active		{color:#A8C5E5; text-decoration: none;}
 	============================================= */
 table.activity			{width:100%; border-collapse:collapse;}
 table.activity td		{color:#B8C8CD; font-size:1.25em; line-height:1.35em; word-spacing:0.7px; padding:10px 20px; vertical-align:top; border-bottom:1px solid #333642;}
-table.activity td:nth-child(1)	{padding:10px 0;}
-table.activity td:nth-child(2)	{padding:0 30px 0 0;}
-table.activity td:nth-child(3)	{text-align:right; padding-right:0; min-width:140px; font-size:1.0em;}
+table.activity td.num	{padding:10px 0;}
+table.activity td.title	{padding:0 30px 0 0;}
+table.activity td.value	{text-align:right; padding-right:0; min-width:140px; font-size:1.0em;}
 table.activity td.alert_no_iati	{text-align:center; font-size:2.0em;}
 table.activity td span	{display:block; padding-top:5px; color:#9C8876; font-size:0.7em; line-height:1.0em;}
 table.activity a		{display:inline-block; padding:10px 20px; width:100%; color:#95B0CF;}
