@@ -37,14 +37,14 @@
 
 #donor_activities_data
 <tr>
-	<td>{num}.</td>
-	<td title="{donor_activities_title_tip_text}">
+	<td class="num">{num}.</td>
+	<td class="title" title="{donor_activities_title_tip_text}">
 		<a href="#view=act&aid={aid}">
 			{title}
 			<span>{view_donor_activites_reporting_text}</span>
 		</a>
 	</td>
-	<td title="{donor_activities_percentage_tip_text}">
+	<td class="value" title="{donor_activities_percentage_tip_text}">
 		<div class="donor_activities_spend_wrap">
 			<div class="donor_activities_spend">{commitment}</div>
 			<div class="donor_activities_barchart_wrap">
