@@ -38,12 +38,12 @@
 
 #donor_budgets_data
 <tr>
-	<td>{num}.</td>
-	<td>
+	<td class="num">{num}.</td>
+	<td class="title">
 		<a href="#view=act&aid={aid}">
 			{title}
 			<span>{view_donor_activites_reporting_text}</span>
 		</a>
 	</td>
-	<td>{amount}</td>
+	<td class="value">{amount}</td>
 </tr>
