@@ -38,12 +38,12 @@
 
 #donor_transactions_data
 <tr>
-	<td>{num}.</td>
-	<td title="{donor_transactions_title_tip_text}">
+	<td class="num">{num}.</td>
+	<td class="title" title="{donor_transactions_title_tip_text}">
 		<a href="#view=act&aid={aid}">
 			{title}
 			<span>{view_donor_activites_reporting_text}</span>
 		</a>
 	</td>
-	<td title="{donor_transactions_amount_tip_text}">{amount}</td>
+	<td class="value" title="{donor_transactions_amount_tip_text}">{amount}</td>
 </tr>
