@@ -184,25 +184,25 @@ BANGLADESH
 #table_active_data
 <tr>
 	<td>{num}.</td>
-	<td>
+	<td class="title">
 		<a href="#view=act&aid={aid}" title="{table_active_title_tip_text}">
 			{title}
 			<span>{view_donor_activites_reporting_text}</span>
 		</a>
 	</td>
-	<td title="{table_active_date_tip_text}">{date}</td>
+	<td class="date" title="{table_active_date_tip_text}">{date}</td>
 </tr>
 
 #table_ended_data
 <tr>
 	<td>{num}.</td>
-	<td>
+	<td class="title">
 		<a href="#view=act&aid={activity}" title="{table_ended_title_tip_text}">
 			{title}
 			<span>{view_donor_activites_reporting_text}</span>
 		</a>
 	</td>
-	<td title="{table_ended_date_tip_text}">{date}</td>
+	<td class="date" title="{table_ended_date_tip_text}">{date}</td>
 </tr>
 
 #donor_graph
