@@ -4,6 +4,7 @@ New graphs replace old money modules
 Fixed css for graphs
 Graph titles are links
 Clean up classes for nth-child types
+Donor views are now in separate pages
 
 Development Portal (2014-04-02 shi)
 ==============================
